# hanthor-rust

./: .gitignore  AGENT-GNOME-REFERENCE.md  AGENT-REFERENCE-LIBRARY.md  CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  gui-tests.yml  publish-decks.yml  publish-letters.yml  publish-tables.yml  publish.yml
.pi/goals/: active_goal_2026062315561696_mqqi1jwm-5ohz96.md  active_goal_2026062322290239_mqqw2n3v-ho4w1q.md  active_goal_2026062323283092_mqqy74ln-2otxd6.md  active_goal_2026062411263665_mqrnulrf-vsg84g.md  active_goal_2026062412542206_mqrqzgkw-qkrpas.md  goal_events.jsonl
decks/: Cargo.toml
decks/src/: canvas.rs  engine.rs  export.rs  main.rs  markdown.rs  preferences.rs  toolbar.rs  transition.rs  undo.rs  window.rs
docs/: GNOME-AUDIT-2026-06.md  GUI-TESTING-SPEC.md  IMPLEMENTATION-PLAN.md  TEST-PLAN.md  audit-phase3.md  audit-phase4.md  gnome-hig-audit-framework.md  gnome-hig-cross-app-review-2026-06-25.md  gui-testing-research.md  hig-fixes-2026-06-25.md  vision-verification-audit-2026-06-25.md
docs/research/: 01-survey.md  02-deep-dive.md  03-gap-analysis.md  04-architecture.md  05-implementation-plan.md  06-suite-common-extractions.md
flatpak/: org.tunaos.decks-rust.desktop  org.tunaos.decks-rust.json  org.tunaos.letters-rust.desktop  org.tunaos.letters-rust.gschema.xml  org.tunaos.letters-rust.json  org.tunaos.tables-rust.desktop  org.tunaos.tables-rust.json
letters/: Cargo.toml
letters/src/: docx_bridge.rs  engine.rs  layout.rs  main.rs  page_container.rs  preferences.rs  print_preview.rs  ruler.rs  window.rs
skills/broadway-inspect/: SKILL.md  broadway_inspect.py  interact_test.py  vision_inspect.py
suite-common/: Cargo.toml
suite-common-core/: Cargo.toml
suite-common/src/: lib.rs  (+1 more)
tables/: Cargo.toml
tables/src/: charts.rs  engine.rs  export.rs  grid.rs  grid_render.rs  main.rs  preferences.rs  sheet.rs  undo.rs  window.rs
(+27 files in other folders)
