[package]
name = "tables"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.9", package = "gtk4" }
libadwaita = "0.7"
cairo-rs = { version = "0.20", features = ["png"] }
suite-common = { path = "../suite-common" }
calamine = "0.26"
rust_xlsxwriter = "0.80"

[[bin]]
name = "tables"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
